# jinja_template_renderer

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
jinja_reader/: __init__.py  __main__.py  main.py  mock_data.py  parser.py
jinja_reader/data/: example.json
jinja_reader/init_files/: example.jinja  example.json
jinja_reader/templates/: example.jinja
