[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-reader"
version = "0.1.0"
description = "Standalone Jinja template reader: extract variables and generate mock data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.0"]

[project.scripts]
jinja-reader = "jinja_reader.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jinja_reader"]
